<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_accept">Accept</string>
    <string name="text_decline">Decline</string>
    <string name="text_missed_call">Missed call</string>
    <string name="text_call_back">Call back</string>
    <string name="text_post_notification_message_required">Notification permission is required, Please allow notification permission from setting.</string>
    <string name="text_incoming_call">Incoming call…</string>
    <string name="text_caller">Caller</string>
    <string name="text_app_logo">App Logo</string>

</resources>