<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvNameCaller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                android:text="@string/text_caller"
                android:maxLines="1"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_logo"
                    android:contentDescription="@string/text_app_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    android:text="@string/text_incoming_call"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="end"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/llDecline"
            android:layout_width="@dimen/base_margin_x4"
            android:layout_height="@dimen/base_margin_x4"
            android:background="@drawable/rounded_button_decline"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin_half"
                android:layout_marginRight="@dimen/base_margin_half"
                android:src="@drawable/ic_decline"
                app:tint="@android:color/white"
               />

            <TextView
                android:id="@+id/tvDecline"
                style="@style/Widget.Compat.NotificationActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin_half"
                android:layout_marginRight="@dimen/base_margin_half"
                android:gravity="center"
                android:text="@string/text_decline"
                android:textAllCaps="false"
                android:textColor="@color/action_text"
                android:visibility="gone" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:id="@+id/llAccept"
            android:layout_width="@dimen/base_margin_x4"
            android:layout_height="@dimen/base_margin_x4"
            android:background="@drawable/rounded_button_accept"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin_half"
                android:layout_marginRight="@dimen/base_margin_half"
                android:src="@drawable/ic_accept"
                app:tint="@android:color/white"
                 />

            <TextView
                android:id="@+id/tvAccept"
                style="@style/Widget.Compat.NotificationActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin_half"
                android:layout_marginRight="@dimen/base_margin_half"
                android:gravity="center"
                android:text="@string/text_accept"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/action_text" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>